Fix mediaqueries for movieboxes to avoid collapses

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -544,7 +544,7 @@ p.created {
   }
 }
 
-@media only screen and (min-width: 640px) and (max-width: 770px) {
+@media only screen and (min-width: 640px) and (max-width: 774px) {
 
   h4.index-heading {
     margin-top: 3px;
@@ -740,7 +740,7 @@ p.created {
   }
 }
 
-@media only screen and (min-width: 770px) and (max-width: 930px) {
+@media only screen and (min-width: 775px) and (max-width: 946px) {
   .movie-box-wrapper {
     width: 300px!important;
   }
@@ -793,7 +793,7 @@ p.created {
   }
 }
 
-@media only screen and (min-width: 930px) and (max-width: 1024px) {
+@media only screen and (min-width: 947px) and (max-width: 1024px) {
   
   h4.index-heading {
     margin-top: 33px;
@@ -831,7 +831,7 @@ p.created {
   }
 }
 
-@media only screen and (min-width: 1025px) and (max-width: 1050px) {
+@media only screen and (min-width: 1025px) and (max-width: 1062px) {
   
   h4.index-heading {
     margin-top: 33px;
@@ -839,7 +839,7 @@ p.created {
   }
   
   .movie-box-wrapper {
-    width: 338px!important;
+    width: 330px!important;
   }
 
   .content-wrapper {
@@ -869,7 +869,7 @@ p.created {
   }
 }
 
-@media only screen and (min-width: 1050px) and (max-width: 1200px) {
+@media only screen and (min-width: 1063px) and (max-width: 1215px) {
   
   h4.index-heading {
     margin-top: 33px;
@@ -973,7 +973,7 @@ p.created {
 }
 
 
-@media only screen and (min-width: 1200px) and (max-width: 1360px) {
+@media only screen and (min-width: 1216px) and (max-width: 1375px) {
   
   h4.index-heading {
     margin-top: 13px;
@@ -1011,7 +1011,7 @@ p.created {
   }
 }
 
-@media only screen and (min-width: 1574px) and (max-width: 1750px) {
+@media only screen and (min-width: 1591px) and (max-width: 1750px) {
   .movie-box-wrapper {
     width: 519px!important;
   }
@@ -1043,7 +1043,7 @@ p.created {
   }
 }
 
-@media only screen and (min-width: 1750px) and (max-width: 1820px) {
+@media only screen and (min-width: 1751px) and (max-width: 1820px) {
   .movie-box-wrapper {
     width: 577px!important;
   }
@@ -1075,7 +1075,7 @@ p.created {
   }
 }
 
-@media only screen and (min-width: 1820px) {
+@media only screen and (min-width: 1821px) {
   /* Fixa testboxen här, döp om */
   .movie-box-wrapper {
     height: 350px!important;
